# DeviceReceiver

./: .gitignore  AppConfig.cpp  AppConfig.h  ApplicationController.cpp  ApplicationController.h  ArrayPlotWindow.cpp  ArrayPlotWindow.h  CMakeLists.txt  DataCacheManager.cpp  DataCacheManager.h  DataExporter.cpp  DataExporter.h  DataProcessor.cpp  DataProcessor.h  FrameData.h  GrpcEndpointUtils.h  GrpcReceiverBackend.cpp  GrpcReceiverBackend.h  HeatMapPlotWindow.cpp  HeatMapPlotWindow.h  IReceiverBackend.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlotDataHub.cpp  PlotDataHub.h  PlotWindow.cpp  PlotWindow.h  PlotWindowBase.cpp  PlotWindowBase.h  PlotWindowManager.cpp  PlotWindowManager.h  PulsedDecayPlotWindow.cpp  PulsedDecayPlotWindow.h  README.md  SerialReceiver.cpp  SerialReceiver.h  StagePoseLatch.cpp  StagePoseLatch.h  StageReceiverBackend.cpp  (+16 more)
.cursor/rules/: project-environment.mdc
3rd_qcustomplot/3rd_qcustomplot/: 3rd_qcustomplot.pri
cmakeDemo/: CMakeLists.txt
proto/: device_data.proto  stage.proto
proto/generated_py/: __init__.py  device_data_pb2.py  device_data_pb2_grpc.py
testDemo/: CMakeLists.txt  datagenerator.cpp  datagenerator.h  main.cpp  mainwindow.cpp  mainwindow.h  performancemonitor.cpp  performancemonitor.h  plotwindow.cpp  plotwindow.h
